# memstream

./: CMakeLists.txt  README.md
memstream/: CMakeLists.txt
memstream/cpp/: allocator.cpp  memstream.cpp
memstream/include/: memstream.h
memstream/include/memstream/: allocator.h  api.h  memstream.h
memstream/test/: allocator_test.h  main.cpp  membuf_test.h
primitive_io/: CMakeLists.txt
primitive_io/cpp/: bitpacking_reader.cpp  bitpacking_reader_impl.cpp  bitpacking_writer.cpp  bitpacking_writer_impl.cpp
primitive_io/generator/: generate_bitpackers.py
primitive_io/include/primitive_io/: api.h  bitpacking_reader.h  bitpacking_reader_impl.h  bitpacking_writer.h  bitpacking_writer_impl.h  primitive_io.h  primitive_reader.h  primitive_reader_base.h  primitive_writer.h  primitive_writer_base.h
primitive_io/test/: bitpacking_test.h  test.cpp
